; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_BTM_BleReadControllerFeatures.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_BTM_BleReadControllerFeatures.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@TRUE = common dso_local global i64 0, align 8
@btm_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [30 x i8] c"BTM_BleReadControllerFeatures\00", align 1
@p_ctrl_le_feature_rd_cmpl_cback = common dso_local global i32* null, align 8
@HCI_BLE_VENDOR_CAP_OCF = common dso_local global i32 0, align 4
@btm_ble_vendor_capability_vsc_cmpl_cback = common dso_local global i32 0, align 4
@BTM_CMD_STARTED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [43 x i8] c"LE Get_Vendor Capabilities Command Failed.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BTM_BleReadControllerFeatures(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @TRUE, align 8
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %18

7:                                                ; preds = %1
  %8 = call i32 @BTM_TRACE_DEBUG(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %9 = load i32*, i32** %2, align 8
  store i32* %9, i32** @p_ctrl_le_feature_rd_cmpl_cback, align 8
  %10 = load i32, i32* @HCI_BLE_VENDOR_CAP_OCF, align 4
  %11 = load i32, i32* @btm_ble_vendor_capability_vsc_cmpl_cback, align 4
  %12 = call i64 @BTM_VendorSpecificCommand(i32 %10, i32 0, i32* null, i32 %11)
  %13 = load i64, i64* @BTM_CMD_STARTED, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %7
  %16 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %7
  br label %18

18:                                               ; preds = %17, %6
  ret void
}

declare dso_local i32 @BTM_TRACE_DEBUG(i8*) #1

declare dso_local i64 @BTM_VendorSpecificCommand(i32, i32, i32*, i32) #1

declare dso_local i32 @BTM_TRACE_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
